--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "torrentapi",
   "version": "1.0.0",
-  "type": "commonjs",
+  "type": "module",
   "description": "Unofficial apis for torrent search sites",
   "main": "index.js",
   "scripts": {
