--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Igidali",
   "license": "ISC",
   "dependencies": {
+    "bencode": "^4.0.0",
     "cheerio": "^1.0.0-rc.12",
     "cloudscraper": "^4.6.0",
     "express": "^4.19.2"
