--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bencode": "^4.0.0",
     "cheerio": "^1.0.0-rc.12",
     "cloudscraper": "^4.6.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "webtorrent": "^2.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
