--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "torrentapi",
+  "name": "torrent-api",
   "version": "1.0.0",
   "type": "module",
-  "description": "Unofficial apis for torrent search sites",
+  "description": "Torrent scraper from popular torrent sources (1377x, Yts etc)",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js"
@@ -10,7 +10,6 @@
   "author": "Igidali",
   "license": "ISC",
   "dependencies": {
-    "bencode": "^4.0.0",
     "cheerio": "^1.0.0-rc.12",
     "cloudscraper": "^4.6.0",
     "express": "^4.19.2",
